@@ -69,8 +69,11 @@ those who either can't or don't feel like installing it.</p>
 New features:
 <ul>
 <li>kdecvs-build has been updated to work the latest unsermake from kdenonbeta.
-I think that it should still work with the old unsermake, but I can't check.
+Note that the old unsermake will no longer work.  kdecvs-build by default automatically
+updates unsermake and uses the latest version, so this change shouldn't affect you much.
 </li>
+<li>Don't append make options to the make command when installing anymore, as sometimes it
+seems to confuse unsermake.</li>
 </ul>
 
 <p><b>2004-Sep-20:</b> v0.85<br/>
