@@ -1,5 +1,8 @@
 Version history: 0.86
- * Add support for latest kdecvs-build.
+ * Add support for latest unsermake.
+ * make options are no longer added when installing, it seems to confuse
+   unsermake, and is only really useful for parallel builds anyways,
+   which doesn't matter when installing.
 
 Version history: 0.85
  * Fix bug where packages are built in reverse order. :-(
